# keymagic

./: .gitignore  Pipfile  README.md  cnn-test.ipynb  cnn-train.ipynb  cnn.py  common.ipynb  common.py  keymagic-ts-10-epoch.keras  keymagic.ipynb  keymagic.py  km-cnn.ipynb  pyproject.toml  requirements.txt  strokes.ipynb
keymagic-ts-10-epoch/: keras_metadata.pb  saved_model.pb
keymagic-ts-10-epoch/variables/: variables.data-00000-of-00001  variables.index
models/: keymagic-ts-10-epoch.hdf
